--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.0.1",
     "@heroicons/react": "^2.1.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
     "react-circular-progressbar": "^2.1.0",
